[package]
name = "directinput"
version = "0.1.0"
authors = ["Matt Bilker <me@mbilker.us>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "1.3.2"
raw-window-handle = "0.4.2"
winit = "0.26.0"

[dependencies.winapi]
git = "https://github.com/mbilker/winapi-rs.git"
branch = "0.3"
features = ["dinput"]

[build-dependencies]
windows = "0.21.1"

[[bin]]
name = "io_test"
path = "src/bin/io_test.rs"
