[package]
name = "directinput"
version = "0.1.0"
authors = ["Matt Bilker <me@mbilker.us>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "1.3.2"
raw-window-handle = "0.4.2"
winit = "0.26.0"

[dependencies.winapi]
git = "https://github.com/mbilker/winapi-rs.git"
branch = "0.3"
features = ["dinput"]

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[[bin]]
name = "io_test"
path = "src/bin/io_test.rs"
